--- a/day 2 - css/cheatsheet/css/style.css
+++ b/day 2 - css/cheatsheet/css/style.css
@@ -12,6 +12,10 @@ body{
     margin: 0;
 }
 
+.clr{
+    clear: both;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -23,10 +27,6 @@ a:hover{
 
 a:active{
     color: green;
-}
-
-a:visited{
-    
 }
 
 .container{
@@ -112,4 +112,73 @@ a:visited{
 .my-form input[type="text"], .my-form textarea{
     padding: 8px;
     width: 100%;
+}
+
+.block{
+    float: left;
+    width: 33.33%;
+    border: 1px solid #ccc;
+    pad: 10px;
+    box-sizing: border-box;
+}
+
+#main-block{
+    float: left;
+    width: 70%;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+#sidebar{
+    float: right;
+    width: 30%;
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+.p-box{
+    width: 800px;
+    height: 500px;
+    border: 1px solid #000;
+    margin-top: 30px;
+    position: relative;
+    background-image: url(images/IMG_7781.jpg);
+    background-repeat: no-repeat;
+    background-position: 100px 200px;
+    background-position: center center;
+}
+
+.p-box h1{
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
+
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+}
+
+.fix-me{
+    position: fixed;
+    top: 400px;
+}
+
+.my-list li:first-child{
+    background: red;
+}
+
+.my-list li:last-child{
+    background: blue;
+}
+
+.my-list li:nth-child(5){
+    background: yellow;
+}
+
+.my-list li:nth-child(even){
+    background: yellow;
 }
